update folders
